--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h1>目录</h1>
 <ul>
 <li><a href="postgresql-init.html">PostgreSQL 初始配置</a></li>
+<li><a href="k8s-installation-v1.23.html">安装 Kubernetes 集群 1.23</a></li>
 </ul>
 </body>
 </html>
