--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <ul>
 <li><a href="postgresql-init.html">PostgreSQL 初始配置</a></li>
 <li><a href="k8s-installation-v1.23.html">安装 Kubernetes 集群 1.23</a></li>
+<li><a href="time_calculator.html">时间加法器</a></li>
 </ul>
 </body>
 </html>
